# 2025_dacon_toss

./: .gitignore  CLAUDE.md  DATASET_INFO.md  GOAL.md  README.md  collect_markdown.py  exclude.txt  main.py  project.txt  pull_from_gpu.sh  pyproject.toml
baseline/: baseline.ipynb
ctr_maximizer_gpt/: README.md  config.example.yaml  make_synth.py  requirements.txt
data/: DATASET_INFO.md
plan1/: 001_test_data_load.py  002_simple_baseline.py  003_baseline_more_features.py  004_improved_preprocessing.py  005_xgboost_lightgbm.py  006_optuna_tuning.py  007_ensemble.py  008_submission_pipeline.py  009_full_dataset_training.py  010_xgboost_submission.py  011_balanced_xgboost.py  012_deep_ctr_model.py  013_deep_ctr_large.py  014_efficient_deep_ctr.py  015_stable_deep_ctr.py  016_huge_deep_ctr.py  017_pipeline_deep_ctr.py  018_fast_large_ctr.py  019_profiled_ctr.py  020_fixed_xgboost.py  020_log.txt  021_optimized_deep_ctr.py  022_massive_deep_ctr.py  023_ultra_batch_ctr.py  024_mega_model_ctr.py  025_ensemble.py  EVAL_PLAN.md  EXPERIMENT_LOG.md  PLAN.md  README.md
plan2/: 000_EXPERIMENT_LOG.md  000_run_plan2.sh  001_test_dcnv2.py  002_prepare_cache.py  003_fast_dcnv2.py  004_xgboost_improved.py  005_xgboost_subset.py  006_stable_deep_ctr.py  007_tabnet_model.py  008_deepfm_stable.py  009_ultra_simple_nn.py  010_ultra_stable_deep.py  011_entity_embedding_fixed.py  012_diagnose_nan.py  013_working_deep_model.py  014_improved_deep_model.py  015_fuxictr_fibinet.py  016_deepctr_models.py  017_debug_cuda_error.py  018_deepctr_fixed.py  019_deepctr_full.py  020_deepctr_ensemble.py  (+53 more)
(+94 files in other folders)
