[project]
name = "2025-dacon-toss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
